File support courtesy of John Hoare of the University of Tennesse at Knoxville
git-svn-id: http://brown-ros-pkg.googlecode.com/svn/trunk/experimental/gscam@1023 0d49d21e-669f-11de-873c-fb8c264d332a

--- a/rosdep.yaml
+++ b/rosdep.yaml
@@ -1,3 +1,6 @@
 libgstreamer0.10-dev:
   ubuntu:
     libgstreamer0.10-dev
+libgstreamer-plugins-base0.10-dev:
+  ubuntu:
+    libgstreamer-plugins-base0.10-dev
