building in catkin ws

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(PkgConfig)
 pkg_check_modules(LIBXML2 REQUIRED libxml-2.0)
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-0.10)
 pkg_check_modules(GLIB REQUIRED glib-2.0)
+pkg_check_modules(OPENCV2 REQUIRED opencv2)
 
 
 if(USE_ROSBUILD)
@@ -28,13 +29,13 @@ else()
   project(gscam)
 
   find_package(catkin REQUIRED 
-    COMPONENTS roscpp image_transport sensor_msgs camera_calibration_parsers opencv)
+    COMPONENTS roscpp image_transport sensor_msgs camera_calibration_parsers)
 
   catkin_package(
-    INCLUDE_DIRS include
+    #INCLUDE_DIRS include
     #LIBRARIES ${PROJECT_NAME}
-    CATKIN_DEPENDS roscpp image_transport sensor_msgs camera_calibration_parsers opencv
-    #DEPENDS opencv
+    CATKIN_DEPENDS roscpp image_transport sensor_msgs camera_calibration_parsers
+    DEPENDS opencv2
     )
 
   include_directories(${catkin_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS} ${GSTREAMER_INCLUDE_DIRS})
@@ -45,6 +46,13 @@ else()
     gobject-2.0 gmodule-2.0 gthread-2.0
     rt xml2 glib-2.0 gstapp-0.10
     pthread)
+
+  install(TARGETS gscam
+    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+    LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+    RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+  
 
 endif()
 
