--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <build_depend>libgstreamer0.10-dev</build_depend>
   <build_depend>libgstreamer-plugins-base0.10-dev</build_depend>
 
+  <build_depend>nodelet</build_depend>
   <build_depend>opencv2</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>image_transport</build_depend>
@@ -25,6 +26,7 @@
   <build_depend>camera_calibration_parsers</build_depend>
   <build_depend>camera_info_manager</build_depend>
 
+  <run_depend>nodelet</run_depend>
   <run_depend>opencv2</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>image_transport</run_depend>
