Install some launch files + added nodelet pipeline demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,13 @@ else()
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
         )
 
+   install(FILES
+    examples/v4l.launch
+    examples/gscam_nodelet.launch
+    examples/nodelet_pipeline.launch
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+    )
+
 
   # Interim compatibility
   # Remove this in the next release
