--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
   <build_depend>camera_calibration_parsers</build_depend>
   <build_depend>camera_info_manager</build_depend>
 
@@ -31,6 +32,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>std_srvs</run_depend>
   <run_depend>camera_calibration_parsers</run_depend>
   <run_depend>camera_info_manager</run_depend>
   
