--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 
 project(gscam)
 
@@ -19,112 +19,71 @@ else()
   pkg_check_modules(GST_APP REQUIRED gstreamer-app-0.10)
 endif()
 
-if(USE_ROSBUILD)
-  # Use rosbuild
-  include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+find_package(ament_cmake REQUIRED)
+find_package(class_loader REQUIRED)
+find_package(image_transport REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(camera_calibration_parsers REQUIRED)
+find_package(camera_info_manager REQUIRED)
 
-  rosbuild_init()
+include_directories(
+  include
+  ${GLIB_INCLUDE_DIRS}
+  ${GST_APP_INCLUDE_DIRS})
 
-  set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-  set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+add_library(gscam SHARED src/gscam.cpp)
+target_link_libraries(gscam
+  ${ament_LIBRARIES}
+  ${GSTREAMER_LIBRARIES}
+  ${GST_APP_LIBRARIES})
+ament_target_dependencies(gscam
+  "class_loader"
+  "image_transport"
+  "rclcpp"
+  "rclcpp_components"
+  "sensor_msgs"
+  "camera_calibration_parsers"
+  "camera_info_manager")
+rclcpp_components_register_nodes(gscam "gscam::GSCam")
+set(node_plugins "${node_plugins}gscam::GSCam;$<TARGET_FILE:gscam>\n")
 
-  include_directories(${GLIB_INCLUDE_DIRS} ${GST_APP_INCLUDE_DIRS})
+add_executable(gscam_node src/gscam_node.cpp)
+target_link_libraries(gscam_node gscam
+  ${ament_LIBRARIES}
+  ${GSTREAMER_LIBRARIES}
+  ${GST_APP_LIBRARIES})
+set_target_properties(gscam_node PROPERTIES OUTPUT_NAME gscam)
 
-  rosbuild_add_library(gscam src/gscam.cpp)
-  target_link_libraries(gscam
-    ${GSTREAMER_LIBRARIES}
-    ${GST_APP_LIBRARIES})
+ament_export_dependencies(class_loader)
 
-  rosbuild_add_executable(gscam_node src/gscam_node.cpp)
-  target_link_libraries(gscam_node gscam
-    ${GSTREAMER_LIBRARIES}
-    ${GST_APP_LIBRARIES})
-  set_target_properties(gscam_node PROPERTIES OUTPUT_NAME gscam)
+ament_export_include_directories(include)
 
-  rosbuild_add_library(GSCamNodelet src/gscam_nodelet.cpp)
-  target_link_libraries(GSCamNodelet gscam
-    ${GSTREAMER_LIBRARIES}
-    ${GST_APP_LIBRARIES})
+ament_export_interfaces(export_gscam)
 
-else()
-  # Use Catkin
-  find_package(catkin REQUIRED 
-    COMPONENTS roscpp image_transport sensor_msgs nodelet
-    camera_calibration_parsers camera_info_manager
-    )
+ament_export_libraries(gscam)
 
-  catkin_package(
-    INCLUDE_DIRS include
-    LIBRARIES gscam
-    CATKIN_DEPENDS roscpp nodelet image_transport sensor_msgs
-    camera_calibration_parsers camera_info_manager
-    DEPENDS GSTREAMER GST_APP
-    )
+ament_package()
 
-  include_directories(
-    include
-    ${catkin_INCLUDE_DIRS}
-    ${GLIB_INCLUDE_DIRS}
-    ${GST_APP_INCLUDE_DIRS})
+# Install directives
 
-  add_library(gscam src/gscam.cpp)
-  target_link_libraries(gscam
-    ${catkin_LIBRARIES}
-    ${GSTREAMER_LIBRARIES}
-    ${GST_APP_LIBRARIES})
+install(TARGETS gscam
+  EXPORT export_gscam
+  DESTINATION lib
+  )
 
-  add_executable(gscam_node src/gscam_node.cpp)
-  target_link_libraries(gscam_node gscam
-    ${catkin_LIBRARIES}
-    ${GSTREAMER_LIBRARIES}
-    ${GST_APP_LIBRARIES})
-  set_target_properties(gscam_node PROPERTIES OUTPUT_NAME gscam)
+install(TARGETS gscam_node
+  DESTINATION lib/gscam
+  )
 
-  add_library(GSCamNodelet src/gscam_nodelet.cpp)
-  target_link_libraries(GSCamNodelet gscam
-    ${catkin_LIBRARIES}
-    ${GSTREAMER_LIBRARIES}
-    ${GST_APP_LIBRARIES})
+install(FILES
+  examples/v4l.launch
+  examples/gscam_nodelet.launch
+  examples/nodelet_pipeline.launch
+  DESTINATION share/gscam/launch
+  )
 
-  # Install directives
-
-  install(TARGETS gscam gscam_node GSCamNodelet
-    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-    LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-    RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-    )
-
-  install(DIRECTORY include/${PROJECT_NAME}/
-    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-    PATTERN ".svn" EXCLUDE)
-
-  install(FILES nodelet_plugins.xml
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-    )
-
-  install(FILES
-    examples/v4l.launch
-    examples/gscam_nodelet.launch
-    examples/nodelet_pipeline.launch
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-    )
-
-  install(FILES examples/uncalibrated_parameters.ini
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/examples
-    )
-
-  # Interim compatibility
-  # Remove this in the next release
-  install(FILES ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/gscam_node
-    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
-  set(EXECUTABLE_OUTPUT_PATH ${CATKIN_DEVEL_PREFIX}/lib/${PROJECT_NAME})
-endif()
-
-# Interim compatibility
-# Remove this in the next distribution release
-configure_file(scripts/gscam_node.in ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/gscam_node)
-file(COPY ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/gscam_node 
-  DESTINATION ${EXECUTABLE_OUTPUT_PATH}
-  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-
-
+install(FILES examples/uncalibrated_parameters.ini
+  DESTINATION share/gscam/examples
+  )
