--- a/package.xml
+++ b/package.xml
@@ -29,6 +29,9 @@
   <depend>camera_calibration_parsers</depend>
   <depend>camera_info_manager</depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
